<resources>
    <string name="app_name">Automation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="button_new">new</string>
    <string name="button_more">more</string>
    <string name="operation_count">"operation count: "</string>
    <string name="day_before">day before</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="name">name</string>
    <string name="step">step</string>
    <string name="repeat_times">repeat times</string>
    <string name="click">click</string>
    <string name="click_times">click times</string>
    <string name="operation_setting">operation setting</string>
    <string name="confirm">confirm</string>
    <string name="dialog_back_name">exit without save</string>
    <string name="dialog_back_info">All changes will be lost</string>
    <string name="close">close</string>
    <string name="operation">operation</string>
    <string name="new_click_model">create click model</string>
    <string name="accessiblity_not_open">aceessiblity don\'t open</string>
    <string name="need_accessiblity_open">is jump to open service</string>
    <string name="delay">delay</string>
    <string name="package_name">package name</string>
    <string name="activity">activity</string>
    <string name="widget">widget</string>
    <string name="no_info">no infomation</string>
    <string name="coordination">coordination</string>
    <string name="hide_layout">hide layout</string>
    <string name="show_layout">show layout</string>
    <string name="add_widget">add widget</string>
    <string name="hide_focus">hide focus</string>
    <string name="show_focus">show focus</string>
    <string name="exit">exit</string>
    <string name="add_coordination">add coordination</string>
    <string name="trigger_widget">trigger widget</string>
    <string name="widget_trigger">widget trigger</string>
    <string name="coord_trigger">coordination trigger</string>
    <string name="trigger_view">trigger view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="main">main</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="accessibility_setting">accessibility setting</string>
    <string name="open">open</string>
    <string name="power_setting">power setting</string>
    <string name="power_not_open">power not open</string>
    <string name="select_all">select all</string>
    <string name="confirm_back">press to return</string>
    <string name="allow_automatic_startup">allow automatic startup</string>
    <string name="float_ball">floatball</string>
    <string name="text_trigger">text trigger</string>
    <string name="open_suspend">open suspended window</string>
    <string name="suspend_description">suspend description</string>
    <string name="stop_cond">stop condition</string>
    <string name="end_cond">when scroll to end</string>
    <string name="scroll_time_cond">according to time</string>
    <string name="scroll_widget_cond">according widget change</string>
    <string name="scroll_time">scroll time</string>
    <string name="stop_text">stop text</string>
    <string name="scroll">scroll</string>
    <string name="new_scroll_model">new scroll model</string>
    <string name="import_setting">import setting</string>
    <string name="export_setting">export setting</string>
    <string name="reset_setting">reset setting</string>
    <string name="delete_model">delete model</string>
    <string name="new_model_group">new model group</string>
    <string name="window_state">window state</string>
    <string name="new_delay_model">new delay model</string>
    <string name="hide_from_tray">hide from tray</string>
    <string name="hide_tray_info">hide tray info</string>
    <string name="edit_mode">edit mode</string>
    <string name="text">text</string>
    <string name="trigger_one_page">trigger one page</string>
    <string name="is_attach_previous">need attach previous</string>
    <string name="add_window_info">add window information</string>
    <string name="wait_time">wait time</string>
    <string name="new_condition_model">new condition model</string>
    <string name="help">help</string>
    <string name="back_trigger">back trigger</string>
</resources>