<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_cond"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/scroll_cond_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/scroll_time_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scroll_time_cond" />

        <RadioButton
            android:id="@+id/scroll_end_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_cond" />

        <RadioButton
            android:id="@+id/scroll_widget_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scroll_widget_cond" />
    </RadioGroup>

</LinearLayout>