<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#808FB365"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingTop="2dp"
    android:paddingEnd="6dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/package_name"
            android:textColor="@color/material_orange_800" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_info"
            android:textColor="@color/material_orange_800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/activity"
            android:textColor="@color/material_orange_800" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/operation_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_info"
            android:textColor="@color/material_orange_800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/widget"
            android:textColor="@color/material_orange_800" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/widget_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/no_info"
            android:textColor="@color/material_orange_800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/coordination"
            android:textColor="@color/material_orange_800" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/coordinate_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_info"
            android:textColor="@color/material_orange_800" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/show_layout"
            android:textColor="#004D40"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_widget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:textColor="#004D40"
            android:text="@string/add_widget" />

        <Button
            android:id="@+id/focus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/show_focus"
            android:textColor="#004D40" />

        <Button
            android:id="@+id/add_coord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:textColor="#004D40"
            android:text="@string/add_coordination" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textColor="#004D40" />
    </LinearLayout>
</LinearLayout>