<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/import_setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_setting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/export_setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_setting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_settting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_setting" />
    </LinearLayout>
</FrameLayout>